Improve execute to pull the handler from the config file

--- a/lib/ruby_lambda/templates/config.yml
+++ b/lib/ruby_lambda/templates/config.yml
@@ -1,7 +1,7 @@
 region: us-east-1
 
 function_name: my_lambda_function
-handler: lambda_function.lambda_handler
+handler: lambda_function.handler
 runtime: ruby2.5
 
 aws_access_key: <%= ENV['AWS_ACCESS_KEY'] %>
